force-app/main/default/objects/CCS_Contract__c/fields/Notice_Value__c.field-meta.xml
<CustomField>
    <fullName>Notice_Value__c</fullName>
    <inlineHelpText>Provides the maximum contract value under the OJEU or other notice issued for this contract during the procurement. If the contract was procured under a call off competition/Open Market, the maximum value indicator to suppliers should be provided</inlineHelpText>
    <label>Notice Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>