force-app/main/default/objects/CCS_Contract__c/fields/OJEU_Flag__c.field-meta.xml
<CustomField>
    <fullName>OJEU_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OJEU Flag</label>
    <type>Checkbox</type>
</CustomField>