force-app/main/default/objects/CCS_Contract__c/fields/OJEU_Procedure_Type__c.field-meta.xml
<CustomField>
    <fullName>OJEU_Procedure_Type__c</fullName>
    <inlineHelpText>Provides the procurement type for which the contract was run under. A pre-defined list is available based on the Contracts Finder website options</inlineHelpText>
    <label>Procurement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>Accelerated</fullName>
            </value>
            <value>
                <fullName>Negotiated</fullName>
            </value>
            <value>
                <fullName>AcceleratedNegotiated</fullName>
            </value>
            <value>
                <fullName>CompetitiveDialog</fullName>
            </value>
            <value>
                <fullName>NotApplicable</fullName>
            </value>
            <value>
                <fullName>NotSpecified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>