force-app/main/default/objects/CCS_Contract__c/fields/One_Off_Contract__c.field-meta.xml
<CustomField>
    <fullName>One_Off_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Provides confirmation on whether the contract is for a one off delivery and therefore not on-going service delivery. The ‘tick’ box must be selected if this is the case</inlineHelpText>
    <label>One Off Contract</label>
    <type>Checkbox</type>
</CustomField>