force-app/main/default/objects/CCS_Contract__c/fields/Parent_Group__c.field-meta.xml
<CustomField>
    <fullName>Parent_Group__c</fullName>
    <description>US451</description>
    <formula>Customer__r.Parent_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This shows the organisation&apos;s ultimate parent or - if it has no parent - it shows the organisation itself</inlineHelpText>
    <label>Parent Group</label>
    <type>Text</type>
</CustomField>