force-app/main/default/objects/CCS_Contract__c/fields/Pillar__c.field-meta.xml
<CustomField>
    <fullName>Pillar__c</fullName>
    <formula>IF(!ISBLANK(Supplier_Framework_Lot__c ), Supplier_Framework_Lot__r.Master_Framework_Lot__r.Master_Framework__r.CCS_Sub_Category__r.Parent__r.Parent__r.Name,
 Owner:User.Pillar__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Provides the CCS pillar for the request which is auto-populated based on the CCS team i.e Corporate or People</inlineHelpText>
    <label>Pillar</label>
    <type>Text</type>
</CustomField>