force-app/main/default/objects/CCS_Contract__c/fields/Procurement__c.field-meta.xml
<CustomField>
    <fullName>Procurement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Salesforce ID for the case that must not be used on any procurement/contract documentation</inlineHelpText>
    <label>Procurement</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>CCS_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>