force-app/main/default/objects/CCS_Contract__c/fields/Procurement_Reference__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Reference__c</fullName>
    <description>Mandatory if Procurement Route is not &quot;Transitioned Contract&quot;</description>
    <inlineHelpText>This is the reference for the procurement which will match the contract reference if the contract was put in place by CCS. Mandatory if Procurement Route is not &quot;Transitioned Contract&quot;</inlineHelpText>
    <label>Procurement Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>