force-app/main/default/objects/CCS_Contract__c/fields/Procurement_Route__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Route__c</fullName>
    <inlineHelpText>This is the sourcing route undertaken for the contract as recommended in the procurement strategy</inlineHelpText>
    <label>Procurement Route</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low Value</fullName>
            </value>
            <value>
                <fullName>Call Off (Competition)</fullName>
            </value>
            <value>
                <fullName>Call Off (Direct Award)</fullName>
            </value>
            <value>
                <fullName>Open Market</fullName>
            </value>
            <value>
                <fullName>Single Tender Action</fullName>
            </value>
            <value>
                <fullName>OJEU - Open Procedure</fullName>
            </value>
            <value>
                <fullName>OJEU - Restricted Procedure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>