force-app/main/default/objects/CCS_Contract__c/fields/RAG_Amber_Trigger__c.field-meta.xml
<CustomField>
    <fullName>RAG_Amber_Trigger__c</fullName>
    <formula>Effective_End_Date__c &lt; TODAY() + 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RAG Amber Trigger</label>
    <type>Checkbox</type>
</CustomField>