force-app/main/default/objects/CCS_Contract__c/fields/RAG_Status__c.field-meta.xml
<CustomField>
    <fullName>RAG_Status__c</fullName>
    <formula>IF( AND( Effective_End_Date__c &lt; TODAY() ), IMAGE(&quot;https://png.icons8.com/metro/30/000000/delete-sign.png&quot;, &quot;Black&quot;),
IF( AND( Effective_End_Date__c &lt; TODAY() + 30 ), IMAGE(&quot;https://png.icons8.com/office/30/000000/high-priority.png&quot;, &quot;Red&quot;),
IF( AND( Effective_End_Date__c &lt; TODAY() + 90 ), IMAGE(&quot;https://png.icons8.com/office/30/000000/error.png&quot;, &quot;Amber&quot;),
IF( AND( Effective_End_Date__c = NULL), IMAGE(&quot;https://png.icons8.com/office/30/000000/help.png&quot;, &quot;Unknown&quot;),
IMAGE(&quot;https://png.icons8.com/color/30/000000/checked.png&quot;, &quot;Okay&quot;)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RAG Status</label>
    <type>Text</type>
</CustomField>