force-app/main/default/objects/CCS_Contract__c/fields/Regions__c.field-meta.xml
<CustomField>
    <fullName>Regions__c</fullName>
    <inlineHelpText>Provides details as to where the contract is for. The field already has the pre-defined list based on contracts finder</inlineHelpText>
    <label>Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>North West</fullName>
            </value>
            <value>
                <fullName>Yorkshire and The Humber</fullName>
            </value>
            <value>
                <fullName>East Midlands</fullName>
            </value>
            <value>
                <fullName>West Midlands</fullName>
            </value>
            <value>
                <fullName>East of England</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
            <value>
                <fullName>Scotland</fullName>
            </value>
            <value>
                <fullName>Wales</fullName>
            </value>
            <value>
                <fullName>Northern Ireland</fullName>
            </value>
            <value>
                <fullName>Isle of Man</fullName>
            </value>
            <value>
                <fullName>Channel Islands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>