force-app/main/default/objects/CCS_Contract__c/fields/Renewal_or_Replacement_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Renewal_or_Replacement_Strategy__c</fullName>
    <label>Renewal or Replacement Strategy</label>
    <type>TextArea</type>
</CustomField>