force-app/main/default/objects/CCS_Contract__c/fields/Reprocurement_Procurement_Reference__c.field-meta.xml
<CustomField>
    <fullName>Reprocurement_Procurement_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reprocurement Procurement Reference</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>G&amp;A Enquiry, HR Enquiry, Contract Amendment, Enquiry, Historic Tracker, Tech Support, Service Request</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Contracts (Reprocurement Procurement Reference)</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>