force-app/main/default/objects/CCS_Contract__c/fields/SME_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>SME_Contract_Value__c</fullName>
    <formula>IF ( Is_Supplier_SME__c,  Effective_Contract_Value__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SME Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>