force-app/main/default/objects/CCS_Contract__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>This is the date for which the contract formally starts and work commences</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>