force-app/main/default/objects/CCS_Contract__c/fields/Sum_of_Variation_Value__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Variation_Value__c</fullName>
    <inlineHelpText>This is a sum of the Contract Variation Value of Completed Contract Amendments</inlineHelpText>
    <label>Sum of Variation Value</label>
    <summarizedField>CCS_Contract_Amendment__c.Contract_Variation_Value__c</summarizedField>
    <summaryForeignKey>CCS_Contract_Amendment__c.CCS_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>