force-app/main/default/objects/CCS_Contract__c/fields/Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Confirms who the supplier contact is for the contract</inlineHelpText>
    <label>Supplier Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Supplier__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Supplier Contact)</relationshipLabel>
    <relationshipName>CCS_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>