force-app/main/default/objects/CCS_Contract__c/fields/Supplier_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_DUNS_Number__c</fullName>
    <formula>Supplier__r.Supplier_DUNS_Number__c</formula>
    <inlineHelpText>Provides the unique 9 digit identification number for the supplier</inlineHelpText>
    <label>Supplier DUNS Number</label>
    <type>Text</type>
</CustomField>