force-app/main/default/objects/CCS_Contract__c/fields/Supplier_Framework_Lot__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Framework_Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Provides the name of the supplier from the framework lot</inlineHelpText>
    <label>Framework Lot Supplier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Supplier_Framework_Lot__c.Supplier__c</field>
            <operation>equals</operation>
            <valueField>$Source.Supplier__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Supplier_Framework_Lot__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>CCS_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>