force-app/main/default/objects/CCS_Contract__c/fields/Synchronised_With_Contract_Finder__c.field-meta.xml
<CustomField>
    <fullName>Synchronised_With_Contract_Finder__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A tick box to confirm if the contract notice has been ‘sent to’ Contracts Finder. (Auto-populated)</inlineHelpText>
    <label>Synchronised With Contract Finder</label>
    <type>Checkbox</type>
</CustomField>