force-app/main/default/objects/CCS_Contract__c/fields/Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Name__c</fullName>
    <inlineHelpText>Name of the Procurement Operations team</inlineHelpText>
    <label>Team Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Artemis</fullName>
            </value>
            <value>
                <fullName>Dionysus</fullName>
            </value>
            <value>
                <fullName>Poseidon</fullName>
            </value>
            <value>
                <fullName>Hera</fullName>
            </value>
            <value>
                <fullName>Hypnos</fullName>
            </value>
            <value>
                <fullName>Hermes</fullName>
            </value>
            <value>
                <fullName>Athena</fullName>
            </value>
            <value>
                <fullName>Hecate</fullName>
            </value>
            <value>
                <fullName>Apollo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>