force-app/main/default/objects/CCS_Contract__c/fields/Team_Site__c.field-meta.xml
<CustomField>
    <fullName>Team_Site__c</fullName>
    <inlineHelpText>Provides the CCS office location which is auto-populated based on the Team Name</inlineHelpText>
    <label>Team Site</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Team_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Newport</fullName>
            </value>
            <value>
                <fullName>Norwich</fullName>
            </value>
            <value>
                <fullName>Liverpool</fullName>
            </value>
            <value>
                <fullName>CSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>