force-app/main/default/objects/CCS_Contract__c/fields/Tier_and_Managed__c.field-meta.xml
<CustomField>
    <fullName>Tier_and_Managed__c</fullName>
    <label>Tier and Managed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1 Managed</fullName>
            </value>
            <value>
                <fullName>Tier 1 Non-Managed</fullName>
            </value>
            <value>
                <fullName>Tier 2 Managed</fullName>
            </value>
            <value>
                <fullName>Tier 2 Non-Managed</fullName>
            </value>
            <value>
                <fullName>Tier 3 Managed</fullName>
            </value>
            <value>
                <fullName>Tier 3 Non-Managed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>