force-app/main/default/objects/CCS_Contract__c/fields/Transitioned_Contract__c.field-meta.xml
<CustomField>
    <fullName>Transitioned_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A ‘tick’ box to provide confirmation that the contract was transitioned to CCS and therefore the procurement was not run by CCS</inlineHelpText>
    <label>Transitioned Contract</label>
    <type>Checkbox</type>
</CustomField>