force-app/main/default/objects/CCS_Contract__c/fields/Uplifted_Contract_Value1__c.field-meta.xml
<CustomField>
    <fullName>Uplifted_Contract_Value1__c</fullName>
    <formula>IF(  Count_of_Amendments__c   &lt;&gt; 0, Contract_Value__c +  Sum_of_Variation_Value__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Provides the contract value plus the value of any amendments. The field is auto-populated based on the completed contract amendment related list records</inlineHelpText>
    <label>Uplifted Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>