force-app/main/default/objects/CCS_Contract__c/recordTypes/CCS_Contract.recordType-meta.xml
<RecordType>
    <fullName>CCS_Contract</fullName>
    <active>true</active>
    <description>Contract which CCS have with an external provider</description>
    <label>CCS Contract</label>
</RecordType>