force-app/main/default/objects/CCS_Contract__c/recordTypes/Procurement_Contract.recordType-meta.xml
<RecordType>
    <fullName>Procurement_Contract</fullName>
    <active>true</active>
    <description>A contract which is generated from a CCS Procurement</description>
    <label>Procurement Contract</label>
</RecordType>