force-app/main/default/objects/CCS_Contract__c/validationRules/Contract_Next_Step_Created_May312020.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Next_Step_Created_May312020</fullName>
    <active>true</active>
    <errorConditionFormula>AND(DATEVALUE(CreatedDate )&gt;  DATE(2020,05,31), ISBLANK(TEXT(Contract_Next_Steps__c)), RecordType.Name = &quot;Procurement_Contract&quot;)</errorConditionFormula>
    <errorDisplayField>Contract_Next_Steps__c</errorDisplayField>
    <errorMessage>Please choose a Contracts Next Steps value before progressing.</errorMessage>
</ValidationRule>