force-app/main/default/objects/CCS_Contract__c/validationRules/Contract_Type_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Type_Selection</fullName>
    <active>true</active>
    <description>A contract type of One Off Contract, Managed Contract and Transitioned Contract must be selected.</description>
    <errorConditionFormula>AND( One_Off_Contract__c = FALSE,  Managed_Contract__c  = FALSE,  Transitioned_Contract__c = FALSE)</errorConditionFormula>
    <errorMessage>A contract type of One Off Contract, Managed Contract and Transitioned Contract must be selected.</errorMessage>
</ValidationRule>