force-app/main/default/objects/CCS_Contract__c/validationRules/Reprocurement_Procurement_Reference.validationRule-meta.xml
<ValidationRule>
    <fullName>Reprocurement_Procurement_Reference</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Contract_Next_Steps__c )= &quot;Replaced by contract/procurement&quot;,
 ISBLANK(Reprocurement_Procurement_Reference__c ))</errorConditionFormula>
    <errorDisplayField>Reprocurement_Procurement_Reference__c</errorDisplayField>
    <errorMessage>Please enter corresponding procurement reference</errorMessage>
</ValidationRule>