force-app/main/default/objects/CCS_Contract__c/validationRules/Validation_Rule_For_Extension_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_For_Extension_Details</fullName>
    <active>true</active>
    <description>If Extension Options is set to True, Extension Details must be populated</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &quot;Procurement Contract&quot;,
ISBLANK( Extension_Details__c ) &amp;&amp; ( Extension_Options__c = true))</errorConditionFormula>
    <errorMessage>If Extension Options flag is set, Extension Details must be populated.</errorMessage>
</ValidationRule>