force-app/main/default/objects/CCS_Contract__c/validationRules/Validation_Rule_For_Procurement_Ref.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_For_Procurement_Ref</fullName>
    <active>true</active>
    <description>If the Contract is not Transitioned Contract, Procurement Reference must be populated</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &quot;Procurement Contract&quot;, ISBLANK(Procurement_Reference__c) &amp;&amp; 
!(Transitioned_Contract__c ))</errorConditionFormula>
    <errorMessage>If the Contract is not Transitioned Contract, Procurement Reference must be populated.</errorMessage>
</ValidationRule>