force-app/main/default/objects/CCS_Contract__c/validationRules/Validation_Rule_For_SupplierFrameworkLot.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_For_SupplierFrameworkLot</fullName>
    <active>true</active>
    <description>If Procurement Route = Call Off (competition) OR Call Off (direct award) and SupplierFrameworkLot is not populated, display an error</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &quot;Procurement Contract&quot;, NOT(ISPICKVAL( Status__c,&quot;Pending&quot;))&amp;&amp; ISBLANK( Supplier_Framework_Lot__c ) &amp;&amp; ( ISPICKVAL( Procurement_Route__c , &quot;Call Off (competition)&quot;) ||  ISPICKVAL(Procurement_Route__c, &quot;Call Off (direct award)&quot;) ))</errorConditionFormula>
    <errorMessage>If the call-off is from a CCS Framework, Framework Lot Supplier must be populated.</errorMessage>
</ValidationRule>