force-app/main/default/objects/CCS_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract_Reference__c</columns>
    <columns>Contract_Finder_Notice_Id__c</columns>
    <columns>CCS_Category__c</columns>
    <columns>Customer__c</columns>
    <columns>Supplier__c</columns>
    <columns>Master_Framework_Title__c</columns>
    <columns>Contract_Value__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Master_Framework_RM_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>