force-app/main/default/objects/CCS_Contract__c/listViews/All_CCS_Contracts.listView-meta.xml
<ListView>
    <fullName>All_CCS_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Effective_Contract_Value__c</columns>
    <columns>Supplier__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Effective_End_Date__c</columns>
    <columns>RAG_Status__c</columns>
    <columns>Business_Area__c</columns>
    <columns>Inter_Contract_Spend_To_Date__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CCS_Contract__c.CCS_Contract</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,Pending,Terminated,Expired</value>
    </filters>
    <label>All Internal Contracts</label>
</ListView>