force-app/main/default/objects/CCS_Contract__c/listViews/All_Contracts_Portal.listView-meta.xml
<ListView>
    <fullName>All_Contracts_Portal</fullName>
    <columns>NAME</columns>
    <columns>Supplier__c</columns>
    <columns>Master_Framework_Title__c</columns>
    <columns>Customer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All contracts (My account)</label>
    <language>en_US</language>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>