force-app/main/default/objects/CCS_Contract__c/listViews/All_Expired_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Expired_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Contract_Reference__c</columns>
    <columns>CCS_Category__c</columns>
    <columns>Customer__c</columns>
    <columns>Supplier__c</columns>
    <columns>Master_Framework_Title__c</columns>
    <columns>Contract_Value__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Expired</value>
    </filters>
    <label>All Expired Contracts</label>
</ListView>