force-app/main/default/objects/CCS_Contract__c/listViews/All_Live_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Live_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Contract_Reference__c</columns>
    <columns>Effective_Contract_Value__c</columns>
    <columns>Contract_Spend_To_Date__c</columns>
    <columns>Spend_Value_Status__c</columns>
    <columns>CCS_Category__c</columns>
    <columns>Customer__c</columns>
    <columns>Supplier__c</columns>
    <columns>Master_Framework_Title__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Effective_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>All Live Contracts</label>
</ListView>